--- a/crud/frontend/package.json
+++ b/crud/frontend/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-li.brary/user-event": "^7.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-li.brary/user-event": "^7.1.2",
     "axios": "0.18.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "4.7.0",
+    "react": "^16.12.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
