--- a/crud/frontend/package.json
+++ b/crud/frontend/package.json
@@ -8,12 +8,12 @@
     "@testing-library/react": "^9.3.2",
     "axios": "0.18.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "font-awesome": "4.7.0",
+    "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.12.0",
     "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
