--- a/crud/frontend/package.json
+++ b/crud/frontend/package.json
@@ -12,7 +12,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.12.0",
-    "react-router": "5.1.2",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
