--- a/crud/frontend/package.json
+++ b/crud/frontend/package.json
@@ -6,7 +6,7 @@
     "@testing-li.brary/user-event": "^7.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "axios": "0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
